--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>HARUOMILABO HALLOWEEN Special</title>
     
     <!-- ファビコン設定 -->
-    <link rel="icon" type="image/png" href="https://static.wixstatic.com/media/3eb4b2_36ced4438e6246fc80fa424d4b3c638a~mv2.png">
-    <link rel="apple-touch-icon" href="https://static.wixstatic.com/media/3eb4b2_36ced4438e6246fc80fa424d4b3c638a~mv2.png">
-    <link rel="shortcut icon" href="https://static.wixstatic.com/media/3eb4b2_36ced4438e6246fc80fa424d4b3c638a~mv2.png">
+    <link rel="icon" type="image/png" href="2025-09-19_15.39の画像-removebg-preview-2-Photoroom.png">
+    <link rel="apple-touch-icon" href="2025-09-19_15.39の画像-removebg-preview-2-Photoroom.png">
+    <link rel="shortcut icon" href="2025-09-19_15.39の画像-removebg-preview-2-Photoroom.png">
     
     <style>
         * {
@@ -725,7 +725,7 @@
             <div class="header-content">
                 <div style="flex: 1;"></div>
                 <div>
-                    <img src="https://static.wixstatic.com/media/3eb4b2_36ced4438e6246fc80fa424d4b3c638a~mv2.png" alt="HARUOMILABO Logo" class="site-logo" onclick="showPage('home')" title="ホーム">
+                    <img src="2025-09-19_15.39の画像-removebg-preview-2-Photoroom.png" alt="HARUOMILABO Logo" class="site-logo" onclick="showPage('home')" title="ホーム">
                 </div>
                 <div style="flex: 1; display: flex; justify-content: flex-end;">
                     <img src="https://static.wixstatic.com/media/3eb4b2_346dba7625c241338e949d61d4540d03~mv2.png" alt="Menu" class="hamburger" id="hamburger" onclick="toggleMenu()">
